templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  template:
      metadata:
        labels:
          app: nginx-app-selector
      spec:
        containers:
          - name: nginx-container
            image: nginx:1.13
            ports:
              - containerPort: 80
