templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  ports:
    - name: main
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: nginx-app-selector
