templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    http.port: "443"
spec:
  backend:
    serviceName: nginx-service
    servicePort: 80
